--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://dipan99.github.io/my-app-test-repo",
-  "name": "my-app",
+  "name": "textutils",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
